# etftui

./: .gitignore  .timetracker  CMakeLists.txt  LICENSE  Makefile  README.md  breakpoints.lldb  cmake-format.yaml
assets/aseprite/: player1.aseprite  player1.json  player1.lua
assets/shaders/: 2dSpriteFragment.glsl  2dSpriteFragmentE.glsl  2dSpriteVertex.glsl  2dSpriteVertexE.glsl
cmake/: AppIcon.icns  Info.plist
src/: CMakeLists.txt  main.c
src/scripts/: gameConfig.lua  gameState.lua  main.lua  scenes.lua
src/scripts/data/: hero.lua
src/scripts/ui/: debugLogWindow.lua  logWindow.lua  terminal.lua
tools/: jsontolua.py
